# libtorrent-wasm

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  package.json  tsconfig.json  vite.config.ts
example/: check-opfs.mjs  fkn-only.html  index.html  package.json  perf-probe.mjs  timer-probe.mjs  timer-test.html  worker.html  worker.ts
patches/: 0001-feat-add-WASM-port-of-libtorrent-for-browser-via-FKN.patch  0002-fix-unwedge-UDP-tick-on-Emscripten-force-i32-split-s.patch  0003-fix-use-WASI-errno-values-EINPROGRESS-26-EAGAIN-6-in.patch  0004-fix-raise-minimum-peer-request_timeout-to-30s-to-avo.patch  0005-fix-stop-silently-disconnecting-TCP-peers-when-m_soc.patch  0006-perf-clamp-echoed-uTP-timestamp_difference-to-1us-to.patch  0007-fix-poll-drive-emscripten-udp-receive.patch  0008-perf-raise-uTP-receive-buffer-to-4-MiB-for-high-BDP.patch
src/: disk_io.cpp  disk_io.hpp  index.ts  library_fkn.js  opfs.ts  types.ts  wrapper.cpp
src/app/: alert-probe.mjs  heartbeat-probe.mjs  index.html  live.html  live.ts  main.ts  node-shims.ts  package.json  perf-probe.mjs  smoke.html  vite.config.ts  webvpn-only.html  worker-main.ts  worker-probe.mjs  worker.html  worker.ts
